# pydantic-openapi-orm

./: .gitignore  Makefile  README.md  pyproject.toml
openapi_orm/: base.py  loader.py  models.py
tests/: factories.py  models.py  secondary_models.py  test_model_extension.py  test_models.py  test_models_pbt.py
tests/fixtures/openapi3/: extensions.yaml
